# bbean-engine

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _add_commits.py  _build_history.py  config.example.json  deny.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/bbean-api/: Cargo.toml
crates/bbean-api/src/: handlers.rs  lib.rs  main.rs  middleware.rs  response.rs  state.rs
crates/bbean-cli/: Cargo.toml
crates/bbean-cli/src/: commands.rs  main.rs  output.rs
crates/bbean-core/: Cargo.toml
crates/bbean-core/src/: config.rs  error.rs  lib.rs  node.rs  proof.rs  runtime.rs  task.rs  utils.rs
crates/bbean-network/: Cargo.toml
crates/bbean-network/src/: constants.rs  lib.rs  peer.rs  protocol.rs  transport.rs
crates/bbean-solana/: Cargo.toml
crates/bbean-solana/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
docs/: architecture.md  getting-started.md  protocol.md
scripts/: benchmark.sh  run-node.sh  setup.sh
sdk/typescript/: .eslintrc.json  README.md  package.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  proof.ts  task.ts  types.ts
tests/fixtures/: config.toml
tests/integration/: network_test.rs  scheduler_test.rs  solana_test.rs
