[workspace]
resolver = "2"
members = [
    "crates/bbean-core",
    "crates/bbean-network",
    "crates/bbean-solana",
    "crates/bbean-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BBEAN-gm/bbean-engine"
authors = ["BBEAN-gm"]

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
borsh = "0.10"
