[package]
name = "bbean-api"
description = "REST API server for BBEAN compute engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bbean-core = { path = "../bbean-core" }
bbean-network = { path = "../bbean-network" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
chrono.workspace = true
uuid.workspace = true
