[package]
name = "bbean-solana"
description = "Solana program for BBEAN reward distribution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
